<resources>
    <string name="app_name">Organizer</string>
    <string name="termin">Due Date</string>
    <string name="TaskDescription">Task Description:</string>
    <string name="Task">Task:</string>
    <string name="Btn_choose_date">Choose Date</string>
    <string name="Btn_choose_time">Choose Time</string>
    <string name="Btn_add_new_task">Add New Task</string>
    <string name="Login">Login</string>
    <string name="Password">Password:</string>
    <string name="Register">Register</string>
    <string name="Password_confirm">Confirm Password</string>
    <string name="btn_save">Save</string>
    <string name="settings">Settings</string>
    <string name="bnt_pl">Polish</string>
    <string name="btn_eng">English</string>
    <string name="bnt_ru">Russian</string>
    <string-array name="priorities">
        <item>Important</item>
        <item>Less Important</item>
        <item>Unimportant</item>
    </string-array>
    <string name="login_error">Wrong login/password</string>
    <string name="string_reklama">Buy Full Version to see more options</string>
    <string name="btn_see_details">SEE DETAILS</string>
    <string name="string_price">PRICE</string>
    <string name="btn_send">SEND</string>
    <string name="string_donate">How mutch do you want to donate?</string>
    <string name="string_redirect_to_bank">Whait for the moment, you will be redirect to your bank.</string>
    <string name="hide_details">HIDE DETAILS</string>
    <string name="low_battery">Battery is low, don`t forget about your tasks!</string>
    <string name="to_do">Things to do:</string>


</resources>
