<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_task"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.example.asapa.terminarz.EditTask">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/taskDescTV"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:layout_weight="0.30" />

        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:layout_weight="0.30" />

    </LinearLayout>

    <TextView
        android:text="@string/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/TaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/dueDateTV"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/dueDateTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp">

        <Button
            android:text="@string/Btn_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDate"
            android:layout_weight="1" />

        <Button
            android:text="@string/Btn_choose_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTime"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/taskNameTV"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/termin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="19dp"
        android:layout_alignBaseline="@+id/dueDateTV"
        android:layout_alignBottom="@+id/dueDateTV"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="250dp"
        android:id="@+id/taskDescTV"
        android:inputType="textMultiLine"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dueDateTV"
        android:id="@+id/spinner"
        android:layout_toEndOf="@+id/dueDateTV"
        android:layout_above="@+id/textView3" />

    <TextView
        android:id="@+id/dueDateTV"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_below="@+id/taskNameTV"
        android:layout_toEndOf="@+id/textView2" />
</RelativeLayout>
