<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_task"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.example.asapa.terminarz.ShowTask">

    <TextView
        android:text="@string/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="12dp"
        android:id="@+id/taskNameTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="45dp"
        android:layout_height="250dp"
        android:id="@+id/taskDescTV"
        android:layout_below="@+id/dueDateTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/TaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dueDateTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/taskDescTV"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:text="Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:layout_weight="0.30" />

        <Button
            android:text="Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteBtn"
            android:layout_weight="0.30" />
    </LinearLayout>

    <TextView
        android:layout_height="40dp"
        android:id="@+id/dueDateTV"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/taskNameTV"
        android:layout_width="150dp"
        android:layout_toStartOf="@+id/prioTV" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/prioTV"
        android:layout_above="@+id/taskDescTV"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:text="@string/termin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/dueDateTV"
        android:layout_alignBottom="@+id/dueDateTV"
        android:layout_alignParentStart="true" />
</RelativeLayout>
